{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 70,
  "lineage": "c591e4a7-61ac-0056-e9e4-a6a801f8f517",
  "resources": [
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079fac4df9b697ad3",
            "arn": "arn:aws:ec2:us-east-1:482874223911:elastic-ip/eipalloc-079fac4df9b697ad3",
            "association_id": "eipassoc-0c4875da425a6adde",
            "domain": "vpc",
            "id": "eipalloc-079fac4df9b697ad3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0449ea03f0fcb2a5d",
            "private_dns": "ip-10-0-92-116.ec2.internal",
            "private_ip": "10.0.92.116",
            "public_dns": "ec2-34-224-111-24.compute-1.amazonaws.com",
            "public_ip": "34.224.111.24",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:internet-gateway/igw-0fa23b34ffe990cd5",
            "id": "igw-0fa23b34ffe990cd5",
            "owner_id": "482874223911",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-01364f31303334326"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ntw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079fac4df9b697ad3",
            "association_id": "eipassoc-0c4875da425a6adde",
            "connectivity_type": "public",
            "id": "nat-08c7abaa265e4fd27",
            "network_interface_id": "eni-0449ea03f0fcb2a5d",
            "private_ip": "10.0.92.116",
            "public_ip": "34.224.111.24",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a2d3b96c1ce2f9a",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_subnet.public_zone1",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:route-table/rtb-00244d287ce64aaa8",
            "id": "rtb-00244d287ce64aaa8",
            "owner_id": "482874223911",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c7abaa265e4fd27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private"
            },
            "tags_all": {
              "Name": "staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01364f31303334326"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "rtb-00244d287ce64aaa8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.ntw",
            "module.vpcs.aws_subnet.public_zone1",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:route-table/rtb-03ac0cfea5de8c83d",
            "id": "rtb-03ac0cfea5de8c83d",
            "owner_id": "482874223911",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa23b34ffe990cd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public"
            },
            "tags_all": {
              "Name": "staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01364f31303334326"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "rtb-03ac0cfea5de8c83d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d576ac83280c91d3",
            "region": "us-east-1",
            "route_table_id": "rtb-00244d287ce64aaa8",
            "subnet_id": "subnet-013f5ed0cc30e9daa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.ntw",
            "module.vpcs.aws_route_table.private_table",
            "module.vpcs.aws_subnet.private_zone1",
            "module.vpcs.aws_subnet.public_zone1",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da81b4566d1677d0",
            "region": "us-east-1",
            "route_table_id": "rtb-00244d287ce64aaa8",
            "subnet_id": "subnet-06ce789674d6db766"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.ntw",
            "module.vpcs.aws_route_table.private_table",
            "module.vpcs.aws_subnet.private_zone2",
            "module.vpcs.aws_subnet.public_zone1",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b209c110266be849",
            "region": "us-east-1",
            "route_table_id": "rtb-03ac0cfea5de8c83d",
            "subnet_id": "subnet-09a2d3b96c1ce2f9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public_table",
            "module.vpcs.aws_subnet.public_zone1",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eaac6ece5a9b74a",
            "region": "us-east-1",
            "route_table_id": "rtb-03ac0cfea5de8c83d",
            "subnet_id": "subnet-07a7e9ccb6d028a5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public_table",
            "module.vpcs.aws_subnet.public_zone2",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:subnet/subnet-013f5ed0cc30e9daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f5ed0cc30e9daa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482874223911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-alb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-alb": "1"
            },
            "vpc_id": "vpc-01364f31303334326"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "subnet-013f5ed0cc30e9daa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:subnet/subnet-06ce789674d6db766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ce789674d6db766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482874223911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-alb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-alb": "1"
            },
            "vpc_id": "vpc-01364f31303334326"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "subnet-06ce789674d6db766",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:subnet/subnet-09a2d3b96c1ce2f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a2d3b96c1ce2f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482874223911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01364f31303334326"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "subnet-09a2d3b96c1ce2f9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:subnet/subnet-07a7e9ccb6d028a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7e9ccb6d028a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482874223911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01364f31303334326"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "482874223911",
            "id": "subnet-07a7e9ccb6d028a5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482874223911:vpc/vpc-01364f31303334326",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0524179c340ee3900",
            "default_route_table_id": "rtb-08303f4290b597231",
            "default_security_group_id": "sg-0b1c7841252c37ad6",
            "dhcp_options_id": "dopt-085cf351a91a7f53a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01364f31303334326",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08303f4290b597231",
            "owner_id": "482874223911",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-main"
            },
            "tags_all": {
              "Name": "staging-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}